--- a/wohub-frontend/package.json
+++ b/wohub-frontend/package.json
@@ -19,6 +19,7 @@
     "@capacitor/status-bar": "6.0.2",
     "@ionic/vue": "^8.4.0",
     "@ionic/vue-router": "^8.4.0",
+    "axios": "^1.7.7",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
