migrations | relations | authentication | authorization | new screens

--- a/wohub-frontend/tsconfig.json
+++ b/wohub-frontend/tsconfig.json
@@ -4,7 +4,9 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "strict": true,
+    "noImplicitAny": false,
+    "noEmitOnError": false,
+    "strict": false,
     "jsx": "preserve",
     "resolveJsonModule": true,
     "isolatedModules": true,
