--- a/wohub-frontend/package.json
+++ b/wohub-frontend/package.json
@@ -20,6 +20,7 @@
     "@ionic/vue": "^8.4.0",
     "@ionic/vue-router": "^8.4.0",
     "axios": "^1.7.7",
+    "dompurify": "^2.5.7",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
