--- a/wohub-frontend/package.json
+++ b/wohub-frontend/package.json
@@ -21,6 +21,7 @@
     "@ionic/vue-router": "^8.4.0",
     "axios": "^1.7.7",
     "dompurify": "^2.5.7",
+    "ionicons": "^7.4.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
